; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_prompt_run.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_prompt_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@envs = common dso_local global i32* null, align 8
@NCUR = common dso_local global i64 0, align 8
@shell = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"-c\00", align 1
@F_CLI = common dso_local global i32 0, align 4
@F_CONFIRM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*)* @prompt_run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prompt_run(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** @envs, align 8
  %8 = load i64, i64* @NCUR, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @setenv(i32 %10, i8* %11, i32 1)
  %13 = load i32, i32* @shell, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* @F_CLI, align 4
  %17 = load i32, i32* @F_CONFIRM, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @spawn(i32 %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %14, i8* %15, i32 %18)
  ret void
}

declare dso_local i32 @setenv(i32, i8*, i32) #1

declare dso_local i32 @spawn(i32, i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
